# bookworm

./: .env  .gitignore  69-144-163-41-html.md  BOOKWORM_README.md  Changelog  README.md  REFERENCE.md  audiobooks_list.md  books-init.json  books-init.md  bookworm.py  config.py  fastmcp.json  models.py  opds_client.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
bookworm/: __init__.py  cli.py  client.py  config.py  download.py  mcp_server.py  search.py
bookworm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
code-to-port/calibre-opds-client/: README.md  tox.ini
code-to-port/calibre-opds-client/calibre_plugin/: __init__.py  config.py  main.py  model.py  ui.py
downloads/: Book_94190 - Unknown.epub
opds/: 66-10-246-39-8980-opds.xml  69-144-163-41-8080-opds.xml  calibrebooks-dwilliams-opds.xml
plans/: opds-fastmcp-plan.md
repo-enumeration/: response.md
ressearch-response/: response.md
search-request/: response.md
tests/: opds.xml  test_config.py  test_models.py
