[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookworm"
version = "0.0.1"
description = "A minimalist CLI utility for searching and downloading ebooks from Calibre content servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bookworm Contributors"}
]
keywords = ["calibre", "ebooks", "cli", "library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
bookworm = "bookworm.cli:cli"

[project.urls]
Homepage = "https://github.com/thesavant42/bookworm"
Documentation = "https://github.com/thesavant42/bookworm#readme"
Repository = "https://github.com/thesavant42/bookworm.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["bookworm*"]
